Gulp file templating

--- a/src/index.html
+++ b/src/index.html
@@ -1,20 +1,5 @@
-<!DOCTYPE html>
-<html lang="ru">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
+ @@include('./_page-header.html')
 
-  <!-- External Styles -->
-  <link rel="stylesheet" href="/css/font-awesome.min.css">
-  <link rel="stylesheet" href="/css/style.css">
-</head>
-<body>
+  <!-- {content} -->
 
-  <!-- External Scripts -->
-  <script type="text/javascript" src="/js/jquery.min.js"></script>
-  <script type="text/javascript" src="/js/bootstrap.min.js"></script>
-  <script type="text/javascript" src="/js/index.js"></script>
-</body>
-</html>
+ @@include('./_page-footer.html')
